public/css/librarian/Book-searching.css
#book-searching-panel {
    box-sizing: border-box;
    background-color: none;
}

.list-wrapper ul li:nth-child(4){
    color: #63b8f1;
}
/* nav-bar-item-highlight */

 /* book header */
 /* ------------------------------------------------------------------ */

 .header-searching{
    position: relative;
    width: 100%;
    box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
    padding: 20px 50px 0;
    z-index: 10;
}

.search-bar{
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: stretch;
}
.search-bar div{
    width: 85%;
    display: flex;
    align-items: stretch;
}
.search-bar select{
    outline: none;
    border: none;
    margin: 5px 0 0 20px;
    height: 40px;
    padding: 0 20px;
    font-size: 1rem;
    border-bottom: 2.5px solid #2980b9;
}
.search-bar button{
    height: 100%;
    border: none;
    padding: 0 30px;
    font-size: 16px;
    color: white;
    background-color: #2980b9;
    cursor: pointer;
}
.search-bar button i{
    margin-right: 5px;
}

.header-searching input{
    width: 80%;
    padding: 15px 20px 15px 40px;
    font-size: 1rem;
    outline: none;
    border-style: none;
}
.function-wrapper{
    display: flex;
    align-items: center;
    /* padding: 0 30px; */
    padding: 10px 0;
    justify-content: space-between;
}
.function-wrapper h2{
    color: #333;
    text-decoration: underline;   
}
.function-wrapper h2 a:hover{
    color: #e67e22;
}
.function-wrapper h2 a{
    color: #333;
}
.function-btn-container button{
    border: none;
    cursor: pointer;
    background-color: #10ac84;
    color: white;
    font-weight: bold;
    font-size: 1rem;
    border-radius: 5px;
    padding: 14px 20px;
}
.function-btn-container button:hover{
    opacity: 0.8;
}
.function-btn-container button:nth-child(1){
    margin-right: 10px;
}

/* book-list-section */
.book-list-section{
    /* margin-top: 200px; */
    height: 100%;
    overflow: scroll;
}

.book-list{
    position: relative;
    display: grid;
    gap: 10px;
    padding: 20px 50px 10px;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(5, 360px);
}
.book-container{
    position: relative;
    padding: 15px;
    align-self: center;
    justify-self: center;
    width: 100%;
    height: 100%;
    border-radius: 5px;
    background-color: white;
}
.book-container:hover{
    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
}
.book-container .book-cover{
    width: 100%;
    height: 220px;
    object-fit: contain;
    object-position: center;
    
}
.book-container .info-box{
    color: #333;
    margin-top: 20px;
}

.book-container .info-box h3, p{
    margin: 3px 0 0 0;
    
}
.book-container .info-box p{
    font-size: 1rem;
    color: #d63031;
    font-weight: bold;
}
.book-container .info-box i{
    width: 20px;
    text-align: center;
    color: #333;
}
.book-container .info-box .detail-and-update{
    display: flex;
}
.detail-and-update input[type="number"]{
    display: none;
}
/* hide book id container input */
.book-container .info-box .detail-btn,
.book-container .info-box .update-btn{
    margin-top: 10px;
    cursor: pointer;
    border: none;
    padding: 10px 20px;
    text-align: center;
    border-radius: 3px;
    color: white;
    background-color: #2980b9;
}
.book-container .info-box button:hover{
    opacity: 0.8;
}
.book-container .info-box .update-btn{
    margin-left: 10px;
}
/* book detail */
 /* ------------------------------------------------------------------ */

 #detail-box-wrapper{
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.6);
    z-index: 15;
    display: none;
}

.detail-main-container{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 80%;
    height: 85%;
    background-color: white;
    padding: 15px 50px 30px;
    border-radius: 5px;
    box-shadow: rgba(255, 255, 255, 0.2) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
}
.detail-main-container h2{
    margin: 10px 0 15px;
    color: #333;
}

.detail-main-container button{
    position: absolute;
    right: 10px;
    top: 10px;
    cursor: pointer;
    border: none;
    float: right;
    color: #333;
    background-color: transparent;
    font-size: 1.8rem;
    padding: 5px 10px;
}

.detail-main-container .info-activity-wrapper{
    width: 100%;
    height: 90%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
}

.detail-book-info-container{
    position: relative;
    display: block;
    width: 32%;
    height: 100%;
    position: relative;
    padding: 15px;
    background-color: white;
    border: 2px dashed teal;
    border-radius: 10px;
}

.book-cover{
    display: block;
    width: 100%;
    height: 285px;
    object-fit: contain;
    object-position: center;
    
}
.detail-book-info-container .info-box{
    color: #333;
    margin-top: 20px;
}

.detail-book-info-container .info-box h3, p{
    margin: 3px 0 0 0;
    font-size: 1.3rem;
    
}
.detail-book-info-container .info-box .status{
    margin-top: 10px;
    height: 45px;
    width: 65%;
    line-height: 45px;
    text-align: center;
    font-size: 1.1rem;
    border-radius: 3px;
    color: white;
    background-color: #d63031;
}

.detail-activity-container{
    width: 65%;
    height: 100%;
    border-radius: 10px;
    padding: 0 20px 20px 20px;
    background-color: white;
    background-color: #333;
    overflow-y: scroll;
}
.activity-card{
    position: relative;
    margin-bottom: 15px;
    padding: 15px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-between;
    /* align-items: center; */
    background-image: linear-gradient(to right, #2980b9 , #57b4f1);
    /* background-color: #2980b9; */
    border-radius: 10px;
}
.detail-activity-container h3{
    margin: 15px 0;
    color: white;
}
.activity-card .icon-container{
    width: 55px;
    height: 55px;
    font-size: 1.6rem;
    color: #333;
    text-align: center;
    line-height: 55px;
    border-radius: 50%;
    background-color: white;
}
.activity-card .info-container{
    color: white ;
    width: 85%;
}
.activity-card .info-container p{
    font-size: 1rem;
}

.detail-book-info-container .more-info-panel{
    position: absolute;
    top: 50%;
    transform: translate(100% ,-50%);
    right: -20px;
    color: #333;
    background-color: white;
    padding: 20px 40px;
    border-radius: 10px;
    background-color: #ffbe76;
    box-shadow: rgba(80, 80, 80, 0.25) 0px 14px 28px, rgba(56, 56, 56, 0.22) 0px 10px 10px;
    display: none;
}
.more-info-panel h4{
    margin: 0;
}
.more-info-panel::after{
    /* triangle left */
    content: "";
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: -20px;
    width: 0;
    height: 0;
    border-top: 15px solid transparent;
    border-right: 20px solid #ffbe76;
    border-bottom: 15px solid transparent;
}
.detail-book-info-container:hover> .more-info-panel{
    display: block;
}

.more-info-panel p{
    font-size: 0.9rem;
}

/* custom-print */
 /* ------------------------------------------------------------------ */

@media print{
    .list-wrapper, .header-searching, .top-bar-wrapper{
        display: none;
    }
    .feature-panel-wrapper{
        position: relative;
        grid-column: 1/13;
        grid-row: 1/3;
    }
    .feature-panel{
        position: absolute;
        width: 100%;
        height: 100%;
        color: white;
        background: rgb(238, 238, 238);
    }
    .detail-and-update{
        display: none !important;
    }
    .book-container .info-box h3, p{
        font-size: 0.8rem !important;
    }
    .book-list{
        grid-template-rows: repeat(5, 320px);
    }
}

